Actors error from validation
